Thu Dec  4 21:48:12 1997  Tom Yu  <tlyu@mit.edu>

	* getpty.c (pty_getpty): Fix checks on string lengths to account
	for terminating nul character.  Some whitespace fixups.

Wed Dec  3 17:16:44 1997  Tom Yu  <tlyu@mit.edu>

	* pty_err.et: Add PTY_OPEN_SLAVE_TOOSHORT error code.

	* open_slave.c (pty_open_slave): Check to ensure that the slave
	name is not NULL or zero-length.

Thu Dec  5 22:43:35 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* update_utmp.c (pty_update_utmp): Apply platform specific patch
		so that HPUX works.  (Kludge for 1.0 release) [PR#40]

Fri Nov 22 11:52:52 1996  Sam Hartman  <hartmans@mit.edu>

	* configure.in : Make sure time_t is define [203]
	* update_wtmp.c (ptyint_update_wtmp): Use time_t for call to time(2). [203]

Fri Nov 15 08:33:54 1996  Ezra Peisach  <epeisach@mit.edu>

	* update_utmp.c (pty_update_utmp): Handle case where utmp uses
		ut_exit.e_exit and utmpx uses ut_exit.ut_exit.

	* configure.in (UT_EXIT_STRUCTURE_DIFFER): If utmpx.h exists, and
		getutmpx does not exist then test if the ut_exit part of
		the utmp/utmpx structure is a structure and if their types
		differ. (e_exit vs. ut_exit).

Fri Nov  8 17:45:42 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* update_utmp.c (pty_update_utmp): Add code which attempts to
		compensate for systems that don't have getutmpx()

	* configure.in: Check for getutmpx().  Replace calls to
		AC_FUNC_CHECK with AC_HAVE_FUNCS().

Thu Jun 13 22:14:24 1996  Tom Yu  <tlyu@voltage-multiplier.mit.edu>

	* configure.in: remove ref to ET_RULES


Thu Jun 13 14:12:16 1996  Sam Hartman  <hartmans@mit.edu>

	* update_wtmp.c (ptyint_update_wtmp): Only update wtmpx if we have
 	updwtmpx.  This probably should be more general, but I'm not
 	really sure of HP caviats.

	* configure.in :  check for updwtmpx

	* getpty.c (pty_getpty): Actually check for 256 ptys on SunOS and
 	other old-style systems.
Tue Apr 16 22:06:36 1996  Ken Raeburn  <raeburn@cygnus.com>
